[package]
name = "cryptomus-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
md5 = "0.7"
